# 3dGameExperimentation

./: README.md
main/: CMakeLists.txt  MainConfig.h.in  main.cpp
main/gamebuild/: 3DGameProject.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MainConfig.h  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
main/gamebuild/main.dir/Debug/: main.exe.recipe  main.ilk
main/gamebuild/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
main/gamebuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
main/gamebuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
main/gamebuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
main/gamebuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
